--- a/Dogs_Episemidemiological_Visualization_3D.ipynb
+++ b/Dogs_Episemidemiological_Visualization_3D.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dogtor dog's temporal <big style=\"color: red;\">3D</big> COVID19 visualization solution"
+    "## Dogtor dog's temporal 3D COVID19 visualization solution"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a 2D visualization solution for temporal COVID19 epidemiological data available from: <strike><a href=\"https://www.acdc.com/\">acdc</a></strike>, <a href=\"https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide\">ecdc</a>."
+    "This is a 3D visualization solution for temporal COVID19 epidemiological data available from: <strike><a href=\"https://www.acdc.com/\">acdc</a></strike>, <a href=\"https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide\">ecdc</a>."
    ]
   },
   {
