--- a/Dogs_Episemidemiological_Visualization.ipynb
+++ b/Dogs_Episemidemiological_Visualization.ipynb
@@ -25,22 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "import ipywidgets as widgets\n",
@@ -55,50 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24ac9e5aa355447b9dbf5da413cce3c1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='reset countries', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5db6c394c1d249f4921a9dcb93cb3087",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=30, description='days', max=300, min=10), Dropdown(description='countrie…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.plotti(days, countries, popRel)>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -113,11 +61,11 @@
     "        print(\"Error fetching data\")\n",
     "\n",
     "# function for fetching the requested countrydata\n",
-    "def preprocess(df, countrylist):\n",
+    "def preprocess(df, countrylist, days):\n",
     "\n",
     "    dflist = []\n",
     "    for country in countrylist:\n",
-    "        dfcountry = df[[\"dateRep\",\"cases\", \"deaths\", \"popData2019\"]][df[\"countriesAndTerritories\"] == country]\n",
+    "        dfcountry = df[[\"dateRep\",\"cases\", \"deaths\", \"popData2019\"]][df[\"countriesAndTerritories\"] == country].head(days)\n",
     "        dfcountry['country'] = country\n",
     "        dfcountry = dfcountry.iloc[::-1]\n",
     "        dfcountry[\"cumCases\"] = dfcountry[\"cases\"].cumsum(axis = 0, skipna = True)\n",
@@ -128,44 +76,35 @@
     "    return(dfTemporal)\n",
     "\n",
     "# function for plotting cases and deaths\n",
-    "def lineplotCaseDeath(df, countrylist, days):\n",
+    "def lineplotCaseDeath(df, countrylist, days, popRel):\n",
     "    \n",
     "    dates = df[\"dateRep\"].tail(days)\n",
+    "    \n",
     "    figCases = go.Figure()\n",
-    "    for country in countrylist:\n",
-    "        figCases.add_trace(go.Scatter(x=dates, y=df[\"cumCases\"][df[\"country\"] == country].tail(days),\n",
+    "    figDeaths = go.Figure()\n",
+    "    \n",
+    "    for country in countrylist:    \n",
+    "        if popRel is False:\n",
+    "            y = df[\"cumCases\"][df[\"country\"] == country]\n",
+    "        else:\n",
+    "            y = (df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country]\n",
+    "        \n",
+    "        figCases.add_trace(go.Scatter(x=dates, y=y,\n",
     "                            mode='lines+markers',\n",
     "                            name=country + ' cases'))\n",
-    "    figCases.update_layout(title=\"Cases:\" + str(list(df[\"country\"].unique())))\n",
-    "    \n",
-    "    figCases.show()\n",
-    "    \n",
-    "    figDeaths = go.Figure()\n",
-    "    for country in countrylist:\n",
-    "        figDeaths.add_trace(go.Scatter(x=dates, y=df[\"cumDeaths\"][df[\"country\"] == country].tail(days),\n",
-    "                            mode='lines+markers',\n",
-    "                            name=country + ' deaths'))\n",
-    "    figDeaths.update_layout(title=\"Deaths:\" + str(list(df[\"country\"].unique())))\n",
-    "    figDeaths.show()\n",
     "\n",
-    "# function for plotting cases and deaths in relation to population size\n",
-    "def lineplotRelative(df, countrylist, days):\n",
-    "    \n",
-    "    dates = df[\"dateRep\"].tail(days)\n",
-    "    figCases = go.Figure()\n",
-    "    for country in countrylist:\n",
-    "        figCases.add_trace(go.Scatter(x=dates, y=(df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country].tail(days),\n",
-    "                            mode='lines+markers',\n",
-    "                            name=country + ' cases'))\n",
-    "    figCases.update_layout(title=\"Cases:\" + str(list(df[\"country\"].unique())))\n",
-    "    \n",
-    "    figCases.show()\n",
-    "    \n",
-    "    figDeaths = go.Figure()\n",
-    "    for country in countrylist:\n",
-    "        figDeaths.add_trace(go.Scatter(x=dates, y=(df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country].tail(days),\n",
+    "        if popRel is False:\n",
+    "            y = df[\"cumDeaths\"][df[\"country\"] == country]\n",
+    "        else:\n",
+    "            y = (df[\"cumDeaths\"]/df[\"popData2019\"])[df[\"country\"] == country]\n",
+    "        \n",
+    "        figDeaths.add_trace(go.Scatter(x=dates, y=y,\n",
     "                            mode='lines+markers',\n",
     "                            name=country + ' deaths'))\n",
+    "\n",
+    "    figCases.update_layout(title=\"Cases:\" + str(list(df[\"country\"].unique())))\n",
+    "    figCases.show()\n",
+    "\n",
     "    figDeaths.update_layout(title=\"Deaths:\" + str(list(df[\"country\"].unique())))\n",
     "    figDeaths.show()\n",
     "\n",
@@ -176,11 +115,8 @@
     "    countrylist.append(countries)\n",
     "    countrylist = list(set(countrylist))\n",
     "    print(countrylist)\n",
-    "    df2 = preprocess(df, countrylist)\n",
-    "    if popRel is False:\n",
-    "        return lineplotCaseDeath(df2, countrylist, days)\n",
-    "    else:\n",
-    "        return lineplotRelative(df2, countrylist, days)\n",
+    "    df2 = preprocess(df, countrylist, days)\n",
+    "    lineplotCaseDeath(df2, countrylist, days, popRel)\n",
     "\n",
     "def resetCountries(b):\n",
     "    global countrylist\n",
