3D plot with linear model as an option
Streamlined plotting function and added linear modeling, courtesy of https://aegis4048.github.io/mutiple_linear_regression_and_visualization_in_python

--- a/Dogs_Episemidemiological_Visualization_3D.ipynb
+++ b/Dogs_Episemidemiological_Visualization_3D.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dogtor dog's temporal 3D COVID19 visualization solution"
+    "## Dogtor dog's temporal <big style=\"color: red;\">3D</big> COVID19 visualization solution"
    ]
   },
   {
@@ -20,32 +20,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a 3D visualization solution for temporal COVID19 epidemiological data available from: <strike><a href=\"https://www.acdc.com/\">acdc</a></strike>, <a href=\"https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide\">ecdc</a>."
+    "This is a 2D visualization solution for temporal COVID19 epidemiological data available from: <strike><a href=\"https://www.acdc.com/\">acdc</a></strike>, <a href=\"https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide\">ecdc</a>."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "import ipywidgets as widgets\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from sklearn import linear_model\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import plotly.graph_objects as go\n",
     "from IPython.display import display\n",
@@ -55,50 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1e0d7e1cfc84d50a4c5a892c24ae799",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='reset countries', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19bf3e6386aa41c29c0076866e76466e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=30, description='days', max=300, min=10), Dropdown(description='countrie…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.plotti(days, countries, Relation_To_Population)>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -114,78 +63,135 @@
     "        break\n",
     "\n",
     "# function for fetching the requested countrydata\n",
-    "def preprocess(df, countrylist):\n",
+    "def preprocess(df, countrylist, days):\n",
     "\n",
     "    dflist = []\n",
     "    for country in countrylist:\n",
-    "        dfcountry = df[[\"dateRep\",\"cases\", \"deaths\", \"popData2019\"]][df[\"countriesAndTerritories\"] == country]\n",
+    "        dfcountry = df[[\"dateRep\",\"cases\", \"deaths\", \"popData2019\"]][df[\"countriesAndTerritories\"] == country].head(days)\n",
     "        dfcountry['country'] = country\n",
     "        dfcountry = dfcountry.iloc[::-1]\n",
     "        dfcountry[\"cumCases\"] = dfcountry[\"cases\"].cumsum(axis = 0, skipna = True)\n",
     "        dfcountry[\"cumDeaths\"] = dfcountry[\"deaths\"].cumsum(axis = 0, skipna = True)\n",
+    "        dfcountry[\"runDate\"] = list(range(days))\n",
     "        dflist.append(dfcountry)\n",
     "    dfTemporal = pd.concat(dflist)\n",
     "    dfTemporal[\"dateRep\"] = dfTemporal[\"dateRep\"].astype(\"str\")\n",
     "    return(dfTemporal)\n",
     "\n",
     "# function for plotting cases and deaths\n",
-    "def lineplotCaseDeath(df, countrylist, days):\n",
+    "def lineplotCaseDeath(df, countrylist, days, relPop, lm):\n",
     "\n",
-    "    df[\"dateRep\"].tail(days)\n",
     "    figCases = go.Figure()\n",
+    "    \n",
     "    for country in countrylist:\n",
-    "        figCases.add_trace(go.Scatter3d(x=df[\"dateRep\"].tail(days), y=df[\"popData2019\"][df[\"country\"] == country].tail(days),\n",
-    "                                      z=df[\"cumCases\"][df[\"country\"] == country].tail(days),\n",
+    "        \n",
+    "        if relPop is False:\n",
+    "            z = df[\"cumCases\"][df[\"country\"] == country]\n",
+    "        else:\n",
+    "            z = (df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country]\n",
+    "            \n",
+    "        if lm is False:\n",
+    "            runDate = df[\"dateRep\"].tail(days)\n",
+    "        else:\n",
+    "            runDate = df[\"runDate\"].tail(days)\n",
+    "            \n",
+    "        figCases.add_trace(go.Scatter3d(x=runDate, y=df[\"popData2019\"][df[\"country\"] == country],\n",
+    "                                      z=z,\n",
     "                            mode='lines',\n",
     "                            name=country + ' cases'))\n",
+    "    if lm is True:\n",
+    "\n",
+    "        dflm = df[[\"runDate\",\"cumCases\", \"popData2019\"]]\n",
+    "        \n",
+    "        X = dflm[['runDate', 'popData2019']].values.reshape(-1,2)\n",
+    "        if relPop is False:\n",
+    "            Y = dflm['cumCases']\n",
+    "        else:\n",
+    "            Y = dflm['cumCases']/dflm['popData2019']\n",
+    "\n",
+    "        ######################## Prepare model data point for visualization ###############################\n",
+    "\n",
+    "        x = X[:, 0]\n",
+    "        y = X[:, 1]\n",
+    "        z = Y\n",
+    "\n",
+    "        x_pred = np.linspace(min(dflm.runDate), max(dflm.runDate), days)   # range of date values\n",
+    "        y_pred = np.linspace(min(dflm.popData2019), max(dflm.popData2019), days)  # range of popData2019 values\n",
+    "        xx_pred, yy_pred = np.meshgrid(x_pred, y_pred)\n",
+    "        model_viz = np.array([xx_pred.flatten(), yy_pred.flatten()]).T\n",
+    "\n",
+    "        ################################################ Train #############################################\n",
+    "\n",
+    "        ols = linear_model.LinearRegression()\n",
+    "        model = ols.fit(X, Y)\n",
+    "        predicted = model.predict(model_viz)\n",
+    "\n",
+    "        ############################################## Evaluate ############################################\n",
+    "\n",
+    "        r2 = model.score(X, Y)\n",
+    "        \n",
+    "        ################################################ Plot ##############################################\n",
+    "        \n",
+    "        figCases.add_trace(go.Scatter3d(x=xx_pred.flatten(), y=yy_pred.flatten(), z=predicted, mode='markers', name='linear model'))\n",
+    "\n",
     "    figCases.update_layout(title=\"Cases:\" + str(list(df[\"country\"].unique())))\n",
     "    \n",
     "    figCases.show()\n",
     "    \n",
     "    figDeaths = go.Figure()\n",
     "    for country in countrylist:\n",
-    "        figDeaths.add_trace(go.Scatter3d(x=df[\"dateRep\"].tail(days), y=df[\"popData2019\"][df[\"country\"] == country].tail(days),\n",
-    "                                       z=df[\"cumDeaths\"][df[\"country\"] == country].tail(days),\n",
+    "        figDeaths.add_trace(go.Scatter3d(x=runDate, y=df[\"popData2019\"][df[\"country\"] == country],\n",
+    "                                       z=z,\n",
     "                            mode='lines',\n",
     "                            name=country + ' deaths'))\n",
-    "    figDeaths.update_layout(title=\"Deaths:\" + str(list(df[\"country\"].unique())))\n",
-    "    figDeaths.show()\n",
+    "        \n",
+    "    if lm is True:\n",
     "\n",
-    "# function for plotting cases and deaths in relation to population size\n",
-    "def lineplotRelative(df, countrylist, days):\n",
+    "        dflm = df[[\"runDate\",\"cumDeaths\", \"popData2019\"]]\n",
+    "        \n",
+    "        X = dflm[['runDate', 'popData2019']].values.reshape(-1,2)\n",
+    "        if relPop is False:\n",
+    "            Y = dflm['cumDeaths']\n",
+    "        else:\n",
+    "            Y = dflm['cumDeaths']/dflm['popData2019']\n",
+    "\n",
+    "        ######################## Prepare model data point for visualization ###############################\n",
+    "\n",
+    "        x = X[:, 0]\n",
+    "        y = X[:, 1]\n",
+    "        z = Y\n",
+    "\n",
+    "        x_pred = np.linspace(min(dflm.runDate), max(dflm.runDate), days)   # range of date values\n",
+    "        y_pred = np.linspace(min(dflm.popData2019), max(dflm.popData2019), days)  # range of popData2019 values\n",
+    "        xx_pred, yy_pred = np.meshgrid(x_pred, y_pred)\n",
+    "        model_viz = np.array([xx_pred.flatten(), yy_pred.flatten()]).T\n",
+    "\n",
+    "        ################################################ Train #############################################\n",
+    "\n",
+    "        ols = linear_model.LinearRegression()\n",
+    "        model = ols.fit(X, Y)\n",
+    "        predicted = model.predict(model_viz)\n",
+    "\n",
+    "        ############################################## Evaluate ############################################\n",
+    "\n",
+    "        r2 = model.score(X, Y)\n",
+    "        \n",
+    "        ################################################ Plot ##############################################\n",
+    "        \n",
+    "        figDeaths.add_trace(go.Scatter3d(x=xx_pred.flatten(), y=yy_pred.flatten(), z=predicted, mode='markers', name='linear model'))\n",
     "    \n",
-    "    dates = df[\"dateRep\"].tail(days)\n",
-    "    figCases = go.Figure()\n",
-    "    for country in countrylist:\n",
-    "        figCases.add_trace(go.Scatter3d(x=dates, y=df[\"popData2019\"][df[\"country\"] == country].tail(days),\n",
-    "                                        z=(df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country].tail(days),\n",
-    "                            mode='lines',\n",
-    "                            name=country + ' cases'))\n",
-    "    figCases.update_layout(title=\"Cases:\" + str(list(df[\"country\"].unique())))\n",
-    "    \n",
-    "    figCases.show()\n",
-    "    \n",
-    "    figDeaths = go.Figure()\n",
-    "    for country in countrylist:\n",
-    "        figDeaths.add_trace(go.Scatter3d(x=dates, y=df[\"popData2019\"][df[\"country\"] == country].tail(days),\n",
-    "                                         z=(df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country].tail(days),\n",
-    "                            mode='lines',\n",
-    "                            name=country + ' deaths'))\n",
     "    figDeaths.update_layout(title=\"Deaths:\" + str(list(df[\"country\"].unique())))\n",
     "    figDeaths.show()\n",
     "\n",
     "countrylist = []\n",
     "\n",
-    "def plotti(days, countries, Relation_To_Population):\n",
+    "def plotti(days, countries, Relation_To_Population, linear_model):\n",
     "    global countrylist\n",
     "    countrylist.append(countries)\n",
     "    countrylist = list(set(countrylist))\n",
     "    print(countrylist)\n",
-    "    df2 = preprocess(df, countrylist)\n",
-    "    if Relation_To_Population is False:\n",
-    "        return lineplotCaseDeath(df2, countrylist, days)\n",
-    "    else:\n",
-    "        return lineplotRelative(df2, countrylist, days)\n",
+    "    df2 = preprocess(df, countrylist, days)\n",
+    "    return lineplotCaseDeath(df2, countrylist, days, Relation_To_Population, linear_model)\n",
     "\n",
     "def resetCountries(b):\n",
     "    global countrylist\n",
@@ -200,7 +206,16 @@
     "\n",
     "interact_manual(plotti, days = widgets.IntSlider(min=10,max=300,value=30), \n",
     "                countries = widgets.Dropdown(options = df[\"countriesAndTerritories\"].unique()), \n",
-    "                Relation_To_Population=False)\n"
+    "                Relation_To_Population=False, linear_model=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "figCases.write_html(\"coronaMultiLinearmodel.html\")"
    ]
   }
  ],
