fixed 3D plot with linear model

--- a/Dogs_Episemidemiological_Visualization_3D.ipynb
+++ b/Dogs_Episemidemiological_Visualization_3D.ipynb
@@ -139,7 +139,14 @@
     "    figCases.show()\n",
     "    \n",
     "    figDeaths = go.Figure()\n",
+    "    \n",
     "    for country in countrylist:\n",
+    "        \n",
+    "        if relPop is False:\n",
+    "            z = df[\"cumDeaths\"][df[\"country\"] == country]\n",
+    "        else:\n",
+    "            z = (df[\"cumDeaths\"]/df[\"popData2019\"])[df[\"country\"] == country]\n",
+    "        \n",
     "        figDeaths.add_trace(go.Scatter3d(x=runDate, y=df[\"popData2019\"][df[\"country\"] == country],\n",
     "                                       z=z,\n",
     "                            mode='lines',\n",
