Dogs episemidemiological 2D visualization

--- a/Dogs_Episemidemiological_Visualization.ipynb
+++ b/Dogs_Episemidemiological_Visualization.ipynb
@@ -25,9 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "import ipywidgets as widgets\n",
@@ -42,11 +55,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56faf1746c484231b9f448b54433ce22",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='reset countries', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8a5fa26dc0c44058b5c30618b127dcd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=30, description='days', max=300, min=10), Dropdown(description='countrie…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plotti(days, countries, popRel)>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -65,7 +117,7 @@
     "\n",
     "    dflist = []\n",
     "    for country in countrylist:\n",
-    "        dfcountry = df[[\"dateRep\",\"cases\", \"deaths\", \"popData2019\"]][df[\"countriesAndTerritories\"] == country].head(days)\n",
+    "        dfcountry = df[[\"dateRep\",\"cases\", \"deaths\", \"popData2019\"]][df[\"countriesAndTerritories\"] == country]\n",
     "        dfcountry['country'] = country\n",
     "        dfcountry = dfcountry.iloc[::-1]\n",
     "        dfcountry[\"cumCases\"] = dfcountry[\"cases\"].cumsum(axis = 0, skipna = True)\n",
@@ -85,18 +137,18 @@
     "    \n",
     "    for country in countrylist:    \n",
     "        if popRel is False:\n",
-    "            y = df[\"cumCases\"][df[\"country\"] == country]\n",
+    "            y = df[\"cumCases\"][df[\"country\"] == country].tail(days)\n",
     "        else:\n",
-    "            y = (df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country]\n",
+    "            y = (df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country].tail(days)\n",
     "        \n",
     "        figCases.add_trace(go.Scatter(x=dates, y=y,\n",
     "                            mode='lines+markers',\n",
     "                            name=country + ' cases'))\n",
     "\n",
     "        if popRel is False:\n",
-    "            y = df[\"cumDeaths\"][df[\"country\"] == country]\n",
+    "            y = df[\"cumDeaths\"][df[\"country\"] == country].tail(days)\n",
     "        else:\n",
-    "            y = (df[\"cumDeaths\"]/df[\"popData2019\"])[df[\"country\"] == country]\n",
+    "            y = (df[\"cumDeaths\"]/df[\"popData2019\"])[df[\"country\"] == country].tail(days)\n",
     "        \n",
     "        figDeaths.add_trace(go.Scatter(x=dates, y=y,\n",
     "                            mode='lines+markers',\n",
@@ -131,7 +183,7 @@
     "\n",
     "interact_manual(plotti, days = widgets.IntSlider(min=10,max=300,value=30), \n",
     "                countries = widgets.Dropdown(options = df[\"countriesAndTerritories\"].unique()), \n",
-    "                popRel=False)\n"
+    "                popRel=False)"
    ]
   }
  ],
@@ -151,10 +203,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 4
 }
-
