Now with 3D mesh

--- a/Dogs_Episemidemiological_Visualization_3D.ipynb
+++ b/Dogs_Episemidemiological_Visualization_3D.ipynb
@@ -25,9 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "import ipywidgets as widgets\n",
@@ -43,11 +56,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9edb75b26e241e0947fef0f9a24b65f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='reset countries', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dff5003c3e494f17b58df60d37f7e6a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=30, description='days', max=300, min=10), Dropdown(description='countrie…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plotti(days, countries, Relation_To_Population, linear_model)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -67,12 +119,12 @@
     "\n",
     "    dflist = []\n",
     "    for country in countrylist:\n",
-    "        dfcountry = df[[\"dateRep\",\"cases\", \"deaths\", \"popData2019\"]][df[\"countriesAndTerritories\"] == country].head(days)\n",
+    "        dfcountry = df[[\"dateRep\",\"cases\", \"deaths\", \"popData2019\"]][df[\"countriesAndTerritories\"] == country]\n",
     "        dfcountry['country'] = country\n",
     "        dfcountry = dfcountry.iloc[::-1]\n",
     "        dfcountry[\"cumCases\"] = dfcountry[\"cases\"].cumsum(axis = 0, skipna = True)\n",
     "        dfcountry[\"cumDeaths\"] = dfcountry[\"deaths\"].cumsum(axis = 0, skipna = True)\n",
-    "        dfcountry[\"runDate\"] = list(range(days))\n",
+    "        dfcountry[\"runDate\"] = list(range(len(dfcountry)))\n",
     "        dflist.append(dfcountry)\n",
     "    dfTemporal = pd.concat(dflist)\n",
     "    dfTemporal[\"dateRep\"] = dfTemporal[\"dateRep\"].astype(\"str\")\n",
@@ -82,26 +134,27 @@
     "def lineplotCaseDeath(df, countrylist, days, relPop, lm):\n",
     "\n",
     "    figCases = go.Figure()\n",
+    "    dflm = pd.DataFrame(columns=[\"runDate\",\"cumCases\", \"cumDeaths\", \"popData2019\"])\n",
     "    \n",
     "    for country in countrylist:\n",
     "        \n",
     "        if relPop is False:\n",
-    "            z = df[\"cumCases\"][df[\"country\"] == country]\n",
+    "            z = df[\"cumCases\"][df[\"country\"] == country].tail(days)\n",
     "        else:\n",
-    "            z = (df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country]\n",
+    "            z = (df[\"cumCases\"]/df[\"popData2019\"])[df[\"country\"] == country].tail(days)\n",
     "            \n",
     "        if lm is False:\n",
     "            runDate = df[\"dateRep\"].tail(days)\n",
     "        else:\n",
     "            runDate = df[\"runDate\"].tail(days)\n",
+    "            dflm = dflm.append(df[[\"runDate\",\"cumCases\", \"cumDeaths\", \"popData2019\"]][df[\"country\"] == country].tail(days), sort=False)\n",
     "            \n",
-    "        figCases.add_trace(go.Scatter3d(x=runDate, y=df[\"popData2019\"][df[\"country\"] == country],\n",
+    "        figCases.add_trace(go.Scatter3d(x=runDate, y=df[\"popData2019\"][df[\"country\"] == country].tail(days),\n",
     "                                      z=z,\n",
     "                            mode='lines',\n",
     "                            name=country + ' cases'))\n",
+    "    \n",
     "    if lm is True:\n",
-    "\n",
-    "        dflm = df[[\"runDate\",\"cumCases\", \"popData2019\"]]\n",
     "        \n",
     "        X = dflm[['runDate', 'popData2019']].values.reshape(-1,2)\n",
     "        if relPop is False:\n",
@@ -132,7 +185,16 @@
     "        \n",
     "        ################################################ Plot ##############################################\n",
     "        \n",
-    "        figCases.add_trace(go.Scatter3d(x=xx_pred.flatten(), y=yy_pred.flatten(), z=predicted, mode='markers', name='linear model'))\n",
+    "        #figCases.add_trace(go.Scatter3d(x=xx_pred.flatten(), y=yy_pred.flatten(), z=predicted, mode='markers', name='linear model'))\n",
+    "        figCases.add_trace({'type': 'mesh3d',\n",
+    "                    'x': xx_pred.flatten(),\n",
+    "                    'y': yy_pred.flatten(),\n",
+    "                    'z': predicted,\n",
+    "                    'delaunayaxis':'x',\n",
+    "                    'color': 'green',\n",
+    "                    'opacity': 0.5\n",
+    "                   })\n",
+    "    \n",
     "\n",
     "    figCases.update_layout(title=\"Cases:\" + str(list(df[\"country\"].unique())))\n",
     "    \n",
@@ -142,19 +204,21 @@
     "    \n",
     "    for country in countrylist:\n",
     "        \n",
-    "        if relPop is False:\n",
-    "            z = df[\"cumDeaths\"][df[\"country\"] == country]\n",
-    "        else:\n",
-    "            z = (df[\"cumDeaths\"]/df[\"popData2019\"])[df[\"country\"] == country]\n",
+    "        df[df[\"country\"] == country].tail(days)\n",
     "        \n",
-    "        figDeaths.add_trace(go.Scatter3d(x=runDate, y=df[\"popData2019\"][df[\"country\"] == country],\n",
+    "        if relPop is False:\n",
+    "            z = df[\"cumDeaths\"][df[\"country\"] == country].tail(days)\n",
+    "        else:\n",
+    "            z = (df[\"cumDeaths\"]/df[\"popData2019\"])[df[\"country\"] == country].tail(days)\n",
+    "        \n",
+    "        figDeaths.add_trace(go.Scatter3d(x=runDate, y=df[\"popData2019\"][df[\"country\"] == country].tail(days),\n",
     "                                       z=z,\n",
     "                            mode='lines',\n",
     "                            name=country + ' deaths'))\n",
     "        \n",
     "    if lm is True:\n",
     "\n",
-    "        dflm = df[[\"runDate\",\"cumDeaths\", \"popData2019\"]]\n",
+    "        #dflm = df[[\"runDate\",\"cumDeaths\", \"popData2019\"]]\n",
     "        \n",
     "        X = dflm[['runDate', 'popData2019']].values.reshape(-1,2)\n",
     "        if relPop is False:\n",
@@ -185,7 +249,15 @@
     "        \n",
     "        ################################################ Plot ##############################################\n",
     "        \n",
-    "        figDeaths.add_trace(go.Scatter3d(x=xx_pred.flatten(), y=yy_pred.flatten(), z=predicted, mode='markers', name='linear model'))\n",
+    "        #figDeaths.add_trace(go.Scatter3d(x=xx_pred.flatten(), y=yy_pred.flatten(), z=predicted, mode='markers', name='linear model'))\n",
+    "        figDeaths.add_trace({'type': 'mesh3d',\n",
+    "                            'x': xx_pred.flatten(),\n",
+    "                            'y': yy_pred.flatten(),\n",
+    "                            'z': predicted,\n",
+    "                            'delaunayaxis':'x',\n",
+    "                            'color': 'green',\n",
+    "                            'opacity': 0.5\n",
+    "                           })\n",
     "    \n",
     "    figDeaths.update_layout(title=\"Deaths:\" + str(list(df[\"country\"].unique())))\n",
     "    figDeaths.show()\n",
@@ -242,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
